# G00-example

./: AGENTS.md
004 data/: sales.csv  (+3 more)
006 analysis/: .gitignore  README.md  generate_visuals.py  pyproject.toml
006 analysis/aktiviteter/3_1_rense_og_strukturere_data/: README.md
006 analysis/aktiviteter/3_1_rense_og_strukturere_data/resultat/: tab_01_dataoversikt.csv  tab_01_dataoversikt.md
006 analysis/aktiviteter/3_1_rense_og_strukturere_data/scripts/: 01_generate_visuals.py
006 analysis/aktiviteter/3_2_velge_og_estimere_modell/: README.md
006 analysis/aktiviteter/3_2_velge_og_estimere_modell/resultat/: tab_01_modellvurdering.csv  tab_01_modellvurdering.md  tab_02_stasjonaritetstester.csv  tab_02_stasjonaritetstester.md  tab_03_differensieringsvurdering.csv  tab_03_differensieringsvurdering.md  tab_04_modellkandidater.csv  tab_04_modellkandidater.md  tab_05_modellparametere.csv  tab_05_modellparametere.md
006 analysis/aktiviteter/3_2_velge_og_estimere_modell/scripts/: 01_vurdere_modelltype.py  02_vurdere_stasjonaritet_og_differensiering.py  03_velge_sarima_ordener.py  04_estimere_modell.py
006 analysis/aktiviteter/3_3_validere_modell/: README.md
006 analysis/aktiviteter/3_4_lage_prognose_og_anbefalinger/: README.md
006 analysis/aktiviteter/3_5_skrive_rapportutkast/: README.md
006 analysis/milepaeler/: ms_004_forste_analyseutkast.md  ms_005_hovedutkast_for_review.md  ms_006_peer_review_gjennomfort.md  ms_007_endelig_innlevering_og_presentasjon.md
006 analysis/resultat/: table_1_data_overview.md  table_2_month_profile.csv  table_2_month_profile.md
(+66 files in other folders)
